# hpc-benchmark-plotter

./: README.md  main.py  pyproject.toml  time_benchmarks.csv  time_report.py
operations/: matrix_multiplication.py
