[tool.poetry]
name = "hpc-python"
version = "0.1.0"
description = ""
authors = ["Merenda Franco N. <merenda.franco83@gmail.com>"]
readme = "README.md"
packages = [{include = "hpc_python"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
